# AnalysisToolsTS

./: .eslintrc.json  .gitattributes  .gitignore  .prettierrc.js  .prettierrc.json  CMakeLists.txt  LICENSE.md  README.md  build.sh  install_analysistoolsts.sh  local.sh  main.cpp  package-lock.json  package.json  submitty.sh  testRunner.py  tsconfig.test.json  versions.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_binaries.yml  build_binary.yml  cppcheck.yml  pr_title.yml  shellcheck.yml  static_analysis.yml  test.yml
src/: count.cpp  count.ts  counter.cpp  counter.h  diagnostics.cpp  diagnostics.ts  index.ts  main.cpp  parser.cpp  parser.h  parser.ts  types.ts  utils.cpp  utils.h  utils.ts
test/: constants.ts  count.spec.ts  diagnostics.spec.ts  parser.spec.ts  utils.spec.ts
test/data/python/: class.py  loop_comprehensions.py  loops.py  operators.py  simple.py
testSuite/: commands.json  fibonacci.java  max.c  solution.cpp
tests/: test_integration.py
tests/fixtures/: commands.json  oop.java  solution.py  🔥.py
